--- a/assets/style.css
+++ b/assets/style.css
@@ -19,24 +19,23 @@
     padding-top: 20px;
 }
 #superboton {
-  background: url(http://www.ashleyjt.net/windows/images/Android.png) /* Url de la imagen */ no-repeat center center, #62BC0F /* Color del botón */;
-background-size: 60%; /* Tamaño de la imagen */
-  height: 200px;  /* Alto del botón */
-  width: 200px;  /* Ancho del botón */
-  display: table;
-  border-radius: 100%;
-  cursor: pointer;
-    box-shadow:
-/* Sombras externa */
-inset 0 10px 15px rgba(255,255,255,.35), inset 0 -10px 15px rgba(0,0,0,.05), inset 10px 0 15px rgba(0,0,0,.05), inset -10px 0 15px rgba(0,0,0,.05),
-/* Sombra interna */
-0 5px 20px rgba(0,0,0,.1);
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    border-radius: 200px 200px 200px 200px;
+    -moz-border-radius: 200px 200px 200px 200px;
+    -webkit-border-radius: 200px 200px 200px 200px;
+    border: 9px solid #13141a;
+    background-color: orange;
+    cursor:pointer;
 }
-
-/* Al presionar */
+#superboton:hover{
+    border: 5px solid #1c1d26;
+}
 #superboton:active {
   box-shadow: inset 0 5px 30px rgba(0,0,0,.2); /* Sombra interior */
   background-size: 55%; /* Cambiamos el tamaño de la imagen */
+  border: 10px solid white;
 }
 
 #estilo{
