--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 #staticturn{
-    
+
     padding: 50px;
     padding-top: 20px;
     color: white;
@@ -67,7 +67,7 @@
     text-align: center;
     font-size: 65px;
     text-shadow: -1px -1px 17px rgba(0, 0, 0, 0.68);
-    
+
 }
 
 #notyet{
@@ -75,8 +75,19 @@
 }
 
 #boton{
-    
+
 padding-top: 125px;
     text-align: center;
-    
+
+}
+.stickyfloat_element {
+  right: 0;
+  text-align: center;
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  background: #888;
+  -webkit-transition: top 0.8s ease-in-out;
+  transition: top 0.8s ease-in-out;
 }
