--- a/assets/style.css
+++ b/assets/style.css
@@ -92,3 +92,60 @@ padding-top: 125px;
   -webkit-transition: top 0.8s ease-in-out;
   transition: top 0.8s ease-in-out;
 }
+
+#yet{
+    
+    color: red;
+    padding-top: 10%;
+    text-align: center;
+    font-size: 65px;
+    text-shadow: -1px -1px 17px rgba(0, 0, 0, 0.68);
+
+    
+}
+
+#cancelar {
+    background-color: #B97575;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#aceptar{
+     height: 200px;
+    width: 200px;
+    text-align: center;
+    border-radius: 200px 200px 200px 200px;
+    -moz-border-radius: 200px 200px 200px 200px;
+    -webkit-border-radius: 200px 200px 200px 200px;
+    border: 9px solid #13141a;
+    background-color: #48B506;
+    cursor:pointer;
+}
+
+#aceptar:hover{
+    border: 5px solid #1c1d26;
+}
+#aceptar:active{
+    box-shadow: inset 0 5px 30px rgba(0,0,0,.2); /* Sombra interior */
+  background-size: 55%; /* Cambiamos el tamaño de la imagen */
+}
+#rechazar{
+     height: 200px;
+    width: 200px;
+    text-align: center;
+    border-radius: 200px 200px 200px 200px;
+    -moz-border-radius: 200px 200px 200px 200px;
+    -webkit-border-radius: 200px 200px 200px 200px;
+    border: 9px solid #13141a;
+    background-color: #B51806;
+    cursor:pointer;
+}
+#rechazar:hover{
+    border: 5px solid #1c1d26;
+}
+#aceptar:active{
+    box-shadow: inset 0 5px 30px rgba(0,0,0,.2); /* Sombra interior */
+  background-size: 55%; /* Cambiamos el tamaño de la imagen */
+}
