--- a/assets/style.css
+++ b/assets/style.css
@@ -94,14 +94,14 @@ padding-top: 125px;
 }
 
 #yet{
-    
+
     color: red;
     padding-top: 10%;
     text-align: center;
     font-size: 65px;
     text-shadow: -1px -1px 17px rgba(0, 0, 0, 0.68);
 
-    
+
 }
 
 #cancelar {
@@ -148,4 +148,10 @@ padding-top: 125px;
 #aceptar:active{
     box-shadow: inset 0 5px 30px rgba(0,0,0,.2); /* Sombra interior */
   background-size: 55%; /* Cambiamos el tamaño de la imagen */
+}
+#yeah{
+    background-color: #2b3d4c;
+}
+.espacio{
+    padding-bottom: 75px;
 }
